--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,17 @@ python:
   - "3.3"
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libbluetooth-dev libusb-1.0-0-dev libgudev-1.0-dev unixodbc-dev libdbi-dev libdbd-sqlite3
+  - sudo apt-get install libgammu-dev
+#  - sudo apt-get install -qq libbluetooth-dev libusb-1.0-0-dev libgudev-1.0-dev unixodbc-dev libdbi-dev libdbd-sqlite3 cmake
+#  - mkdir build-gammu
+#  - cd build-gammu
+#  - wget https://github.com/gammu/gammu/archive/master.tar.gz
+#  - tar xf master.tar.gz
+#  - cd gammu-master
+#  - ./configure --prefix=/usr
+#  - make
+#  - sudo make install
+#  - cd ..
 script:
   - ./setup.py build
 notifications:
