--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,9 @@ python:
   - "3.2"
   - "3.3"
 before_install:
+  - sudo add-apt-repository ppa:nijel/ppa -y
   - sudo apt-get update -qq
   - sudo apt-get install libgammu-dev
-#  - sudo apt-get install -qq libbluetooth-dev libusb-1.0-0-dev libgudev-1.0-dev unixodbc-dev libdbi-dev libdbd-sqlite3 cmake
-#  - mkdir build-gammu
-#  - cd build-gammu
-#  - wget https://github.com/gammu/gammu/archive/master.tar.gz
-#  - tar xf master.tar.gz
-#  - cd gammu-master
-#  - ./configure --prefix=/usr
-#  - make
-#  - sudo make install
-#  - cd ..
 script:
   - ./setup.py build
 notifications:
