--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,10 @@ before_install:
 install:
   - pip install -r requirements.txt
 script:
-  - ./setup.py test
+  - coverage run --source=. ./setup.py test
+after_script:
+  - coveralls
+  - ocular --data-file ".coverage" --config-file ".coveragerc"
 notifications:
   webhooks:
     - https://buildtimetrend.herokuapp.com/travis
