--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.3"
 before_install:
   - sudo add-apt-repository ppa:nijel/ppa -y
-  - sudo apt-get update -qq
+  - sudo apt-get update
   - sudo apt-get install libgammu-dev
 install:
   - pip install -r requirements.txt
