--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
   - "3.2"
   - "3.3"
+  - "3.4"
 before_install:
   - sudo add-apt-repository ppa:nijel/ppa -y
   - sudo apt-get update
@@ -22,3 +23,4 @@ matrix:
   allow_failures:
     - python: "3.2"
     - python: "3.3"
+    - python: "3.4"
