Include test data in package
Signed-off-by: Michal Čihař <michal@cihar.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,5 @@ include README.rst
 include include/*.h
 recursive-include examples *.py
 recursive-include test *.py
+include test/data/*.*
 include examples/data/*.jpg
