--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 before_install:
   - sudo add-apt-repository ppa:nijel/ppa -y
   - sudo apt-get update
-  - sudo apt-get install libgammu-dev
+  - sudo apt-get install libgammu-dev libdbd-sqlite3
 install:
   - pip install -r requirements.txt
 script:
