--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
 install:
   - pip install -r requirements.txt
 script:
+  - CFLAGS=-Wextra ./setup.py build
   - coverage run --source=. ./setup.py test
 after_script:
   - coveralls
