Build with -Wall as well
Signed-off-by: Michal Čihař <michal@cihar.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 install:
   - pip install -r requirements.txt
 script:
-  - CFLAGS=-Wextra ./setup.py build
+  - CFLAGS="-Wall -Wextra" ./setup.py build
   - coverage run --source=. ./setup.py test
 after_script:
   - coveralls
