--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - "3.3"
   - "3.4"
   - "pypy"
+  - "pypy3"
 before_install:
   - sudo add-apt-repository ppa:nijel/ppa -y
   - sudo apt-get update
@@ -27,3 +28,4 @@ matrix:
     - python: "3.3"
     - python: "3.4"
     - python: "pypy"
+    - python: "pypy3"
