Include data required for tests in tarball.
Signed-off-by: Michal Čihař <michal@cihar.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,6 @@ include README.rst
 include include/*.h
 recursive-include examples *.py
 recursive-include test *.py
+recursive-include test/data/gammu-dummy *
 include test/data/*.*
 include examples/data/*.jpg
