--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ python:
   - "3.4"
   - "pypy"
   - "pypy3"
+before_install:
+  - sudo add-apt-repository ppa:nijel/ppa -y
+  - sudo apt-get update
+  - sudo apt-get install libgammu-dev libdbd-sqlite3
 install:
   - pip install -r requirements.txt
 script:
@@ -22,9 +26,6 @@ matrix:
   allow_failures:
     - python: "pypy"
     - python: "pypy3"
-# use docker based faster build
-sudo: false
-# install build dependencies and enable Coverity scan
 addons:
   coverity_scan:
     project:
@@ -33,9 +34,3 @@ addons:
     notification_email: michal@cihar.com
     build_command: ./setup.py build
     branch_pattern: coverity_scan
-  apt:
-    sources:
-    - gammu
-    packages:
-    - libgammu-dev
-    - libdbd-sqlite3
