--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,6 +24,8 @@ install:
   # not already installed.
   - ps: if (-not(Test-Path($env:PYTHON))) { & appveyor\install.ps1 }
   - ps: Get-ChildItem -Path $env:GAMMU_PATH -Recurse
+  - type %GAMMU_PATH%\lib\pkgconfig\gammu.pc
+  - type %GAMMU_PATH%\lib\pkgconfig\gammu-smsd.pc
 
 build_script:
   # Build the compiled extension
