--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,11 +9,14 @@ clone_folder: c:\projects\python-gammu
 
 environment:
   global:
-    PYTHON: "C:\\Python35"
-    PYTHON_VERSION: "3.5.0"
     PYTHON_ARCH: "32"
     GAMMU_VERSION: "1.38.4"
     GAMMU_PATH: "C:\\Gammu"
+  matrix:
+    - PYTHON: "C:\\Python36"
+      PYTHON_VERSION: "3.6.1"
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.5.3"
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
