--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: bionic
 language: python
 python:
   - "2.7"
@@ -18,8 +19,6 @@ after_script:
   - coveralls
   - ocular --data-file ".coverage" --config-file ".coveragerc"
   - codecov
-# use docker based faster build
-sudo: false
 # install build dependencies and enable Coverity scan
 addons:
   coverity_scan:
@@ -30,8 +29,6 @@ addons:
     build_command: ./setup.py build
     branch_pattern: coverity_scan
   apt:
-    sources:
-    - gammu
     packages:
     - libgammu-dev
     - libdbd-sqlite3
