--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,11 +11,11 @@ repos:
     rev: 5.9.3
     hooks:
       - id: isort
-#  - repo: https://github.com/asottile/pyupgrade
-#    rev: v2.23.1
-#    hooks:
-#      - id: pyupgrade
-#        args: [--py36-plus]
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.23.1
+    hooks:
+      - id: pyupgrade
+        args: [--py36-plus]
 #  - repo: https://github.com/psf/black
 #    rev: 21.7b0
 #    hooks:
