--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,10 +16,10 @@ repos:
     hooks:
       - id: pyupgrade
         args: [--py36-plus]
-#  - repo: https://github.com/psf/black
-#    rev: 21.7b0
-#    hooks:
-#      - id: black
+  - repo: https://github.com/psf/black
+    rev: 21.7b0
+    hooks:
+      - id: black
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.10.0
     hooks:
