--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Install gammu
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgammu-dev
+          sudo apt-get install -y libgammu-dev libdbd-sqlite3
       - name: Install pip dependencies
         run: |
           python -m pip install --upgrade pip wheel
-          pip install -r requirements.txt
+          pip install -r requirements-test.txt
       - name: Build
         run: CFLAGS="-Wall -Wextra" ./setup.py build
       - name: Test
