Add Windows dist build

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -3,7 +3,7 @@ name: Distribution
 on: [push, pull_request]
 
 jobs:
-  setup:
+  linux:
     runs-on: ubuntu-20.04
 
     steps:
@@ -22,6 +22,41 @@ jobs:
           pip install -r requirements-test.txt
       - name: build
         run: python ./setup.py sdist bdist_wheel
+      - name: twine
+        run: twine check dist/*
+      - name: Publish package
+        if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@v1.4.2
+        with:
+          user: __token__
+          password: ${{ secrets.pypi_password }}
+
+  windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2.1.6
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-setup-${{ hashFiles('**/requirements*.txt') }}
+      - name: Setup Python
+        uses: actions/setup-python@v2.2.2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Gammu
+        run: |
+          wget -O gammu-setup.exe https://dl.cihar.com/gammu/releases/windows/Gammu-1.41.0-Windows-64bit.exe
+          ./gammu-setup.exe /S /D=C:/Gammu
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel
+          pip install -r requirements-test.txt
+      - name: build
+        run: python ./setup.py bdist_wheel
       - name: twine
         run: twine check dist/*
       - name: Publish package
