--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.8
+      - name: Install Gammu
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgammu-dev libdbd-sqlite3
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
