--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -52,9 +52,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install Gammu
-        shell: bash
         run: |
-          wget -O gammu-setup.exe https://dl.cihar.com/gammu/releases/windows/Gammu-1.41.0-Windows-64bit.exe
+          C:/msys64/usr/bin/wget.exe -O gammu-setup.exe https://dl.cihar.com/gammu/releases/windows/Gammu-1.41.0-Windows-64bit.exe
           ./gammu-setup.exe /S /D=C:/Gammu
       - name: Install dependencies
         run: |
