--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,12 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: ubuntu-latest, windows-latest
         python-version: [3.6, 3.7, 3.8, 3.9]
-    name: Python ${{ matrix.python-version }}
+    name: ${{ matrix.os }}, Python ${{ matrix.python-version }}
 
     steps:
       - uses: actions/checkout@v2
@@ -22,9 +23,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install gammu
+        if: ${{ matrix.os }} == ubuntu-latest
         run: |
           sudo apt-get update
           sudo apt-get install -y libgammu-dev libdbd-sqlite3
+      - name: Install Gammu
+        if: ${{ matrix.os }} == windows-latest
+        run: |
+          C:/msys64/usr/bin/wget.exe -O gammu-setup.exe https://dl.cihar.com/gammu/releases/windows/Gammu-1.41.0-Windows-64bit.exe
+          ./gammu-setup.exe /S /D=C:/Gammu
       - name: Install pip dependencies
         run: |
           python -m pip install --upgrade pip wheel
@@ -37,4 +44,4 @@ jobs:
         run: coverage xml
       - uses: codecov/codecov-action@v2.0.2
         with:
-          name: Python ${{ matrix.python-version }}
+          name: ${{ matrix.os }}, Python ${{ matrix.python-version }}
