--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -22,7 +22,7 @@ jobs:
           sudo apt-get install -y libgammu-dev libdbd-sqlite3
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel
+          python -m pip install --upgrade pip wheel setuptools
           pip install -r requirements-test.txt
       - name: build
         run: python ./setup.py sdist
@@ -64,7 +64,7 @@ jobs:
           ./gammu-setup.exe /S /D=C:/Gammu
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel
+          python -m pip install --upgrade pip wheel setuptools
           pip install -r requirements-test.txt
       - name: build
         run: python ./setup.py bdist_wheel
