--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -38,7 +38,12 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: 
+          - "3.6"
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
         architecture: [x64, x86]
 
     steps:
