--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,13 +7,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: 
+        - ubuntu-latest
+        - windows-latest
         python-version: 
-          - "3.7"
-          - "3.8"
-          - "3.9"
           - "3.10"
           - "3.11"
+          - "3.12"
+          - "3.13"
+          - "3.14"
     name: ${{ matrix.os }}, Python ${{ matrix.python-version }}
 
     steps:
