--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Store the binary wheel
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
-          name: python-package-distributions
+          name: dist-linux
           path: dist
 
   windows:
@@ -39,11 +39,11 @@ jobs:
     strategy:
       matrix:
         python-version: 
-          - "3.6"
-          - "3.7"
-          - "3.8"
-          - "3.9"
           - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
+          - "3.14"
         architecture: [x64, x86]
 
     steps:
@@ -78,12 +78,39 @@ jobs:
       - name: Store the binary wheel
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
-          name: python-package-distributions
+          name: dist-windows-${{ matrix.python-version }}
           path: dist
+
+  check:
+    needs:
+    - linux
+    - windows
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      with:
+        persist-credentials: false
+    - name: Set up Python
+      uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
+      with:
+        python-version: '3.14'
+    - uses: astral-sh/setup-uv@85856786d1ce8acfbcc2f13a5f3fbd6b938f9f41 # v7.1.2
+      with:
+        version: 0.9.7
+    - uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53 # v6.0.0
+      with:
+        path: dist
+        merge-multiple: true
+    - run: uvx twine check --strict dist/*
+    - run: uvx abi3audit dist/*abi3*.whl
+    - run: uvx pydistcheck --inspect dist/*
+    - run: uvx check-wheel-contents dist/*.whl
+    - run: uvx check-manifest -v
 
   publish:
     runs-on: ubuntu-24.04
     needs:
+      - check
       - linux
       - windows
 
@@ -92,11 +119,8 @@ jobs:
       - name: Download all the dists
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7
         with:
-          name: python-package-distributions
           path: dist/
+          merge-multiple: true
       - name: Publish package
         if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
-        with:
-          user: __token__
-          password: ${{ secrets.pypi_password }}
