--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -16,16 +16,15 @@ jobs:
         uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6
         with:
           python-version: 3.14
+      - uses: astral-sh/setup-uv@v7.2.1
       - name: Install Gammu
         run: |
           sudo apt-get update
           sudo apt-get install -y libgammu-dev libdbd-sqlite3
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install -r requirements-test.txt
+        run: uv pip install -r requirements-test.txt
       - name: build
-        run: python ./setup.py sdist
+        run: uv build --sdist
       - name: Store the binary wheel
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
@@ -65,12 +64,11 @@ jobs:
         run: |
           C:/msys64/usr/bin/wget.exe -O gammu-setup.exe https://dl.cihar.com/gammu/releases/windows/Gammu-1.41.0-Windows.exe
           ./gammu-setup.exe /S /D=C:/Gammu
+      - uses: astral-sh/setup-uv@v7.2.1
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install -r requirements-test.txt
+        run: uv pip install -r requirements-test.txt
       - name: build
-        run: python ./setup.py bdist_wheel
+        run: uv build --wheel
       - name: Store the binary wheel
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
