--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,15 +20,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
-      - name: Cache pip
-        uses: actions/cache@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements*.txt') }}
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6
         with:
           python-version: ${{ matrix.python-version }}
+      - uses: astral-sh/setup-uv@v7.2.1
       - name: Install gammu
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
@@ -39,17 +35,10 @@ jobs:
         run: |
           C:/msys64/usr/bin/wget.exe -O gammu-setup.exe https://dl.cihar.com/gammu/releases/windows/Gammu-1.41.0-Windows-64bit.exe
           ./gammu-setup.exe /S /D=C:/Gammu
-      - name: Install pip dependencies
-        run: |
-          python -m pip install --upgrade pip wheel
-          pip install -r requirements-test.txt
-      - name: Build
-        shell: bash
-        run: CFLAGS="-Wall -Wextra" ./setup.py build
+      - name: Install
+        run: uv sync --all-extras --dev
       - name: Test
-        run: pytest
-      - name: Coverage
-        run: coverage xml
+        run: uv run pytest --cov
       - uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5
         with:
           name: ${{ matrix.os }}, Python ${{ matrix.python-version }}
