--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -79,6 +79,10 @@ jobs:
     - uses: astral-sh/setup-uv@85856786d1ce8acfbcc2f13a5f3fbd6b938f9f41 # v7.1.2
       with:
         version: 0.9.29
+    - name: Install gammu
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgammu-dev libdbd-sqlite3
     - uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53 # v6.0.0
       with:
         path: dist
