--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,3 +119,9 @@ sort_inline_arrays = true
 sort_inline_tables = true
 sort_table_keys = true
 spaces_before_inline_comment = 2
+
+[tool.typos.files]
+extend-exclude = [
+  "test/data/*.vcf",
+  "test/data/gammu-dummy/pbk/ME/103"
+]
