--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,3 +125,82 @@ extend-exclude = [
   "test/data/*.vcf",
   "test/data/gammu-dummy/pbk/ME/103"
 ]
+[tool.ruff.format]
+docstring-code-format = true
+
+[tool.ruff.lint]
+extend-safe-fixes = [
+  "ANN",
+  "D",
+  "EM101",
+  "EM102",
+  "FA102",
+  "FLY",
+  "SIM",
+  "TCH",
+  "UP"
+]
+future-annotations = true
+ignore = [
+  "COM",  # CONFIG: No trailing commas
+  "D203",  # CONFIG: incompatible with D211
+  "D206",  # CONFIG: formatter
+  "D212",  # CONFIG: incompatible with D213
+  "E501",  # WONTFIX: we accept long strings (rest is formatted by black)
+  "PERF203", # WONFIX: affects only old Python versions
+  "FURB101",
+  "PLR2004",
+  "S101",
+  "S404",
+  "S607",
+  "D100",
+  "D101",
+  "D102",
+  "D103",
+  "D104",
+  "D107",
+  "D401",
+  "D404",
+  "ARG002",
+  "DOC201",
+  "DOC501",
+  "PLC1901",
+  "PLR6301",
+  "DTZ001",
+  "DTZ006",
+  "ANN001",
+  "ANN002",
+  "ANN003",
+  "ANN201",
+  "ANN202",
+  "B017",
+  "RUF012",
+  "PTH118",
+  "PTH116",
+  "PTH207",
+  "ERA001",
+  "FBT003",
+  "PT027",
+  "PT011",
+  "SIM115",
+  "PLR1704",
+  "TRY300",
+  "D205",
+  "N818",
+  "CPY001",
+  "BLE001",
+  "SLF001",
+  "ASYNC110",
+  "PYI056",
+  "ARG001",
+  "PLW0603",
+  "S603",
+  "N802",
+  "B020",
+  "PTH208",
+  "PLR1702",
+  "S110",
+  "B007",
+]
+preview = true
+select = ["ALL"]
