feat: fetch Gammu releases from GitHub
This is the current primary release location.

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -38,6 +38,9 @@ jobs:
           - "3.12"
           - "3.13"
           - "3.14"
+    env:
+      # renovate: datasource=github-releases depName=gammu/gammu versioning=loose
+      GAMMU_VERSION: 1.43.2
 
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -47,7 +50,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Gammu x64
         run: |
-          C:/msys64/usr/bin/wget.exe -O gammu-setup.exe https://dl.cihar.com/gammu/releases/windows/Gammu-1.41.0-Windows-64bit.exe
+          C:/msys64/usr/bin/wget.exe -O gammu-setup.exe https://github.com/gammu/gammu/releases/download/$Env:GAMMU_VERSION/Gammu-$Env:GAMMU_VERSION-Windows-Minimal.exe
           ./gammu-setup.exe /S /D=C:/Gammu
       - uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b # v7.3.0
       - name: build
